Closes-Bug: #1647533 - Config Pages misalignment
1)Multi selection placeholder text was cropped because of a select2 bug
2)Query section in the routing policy was misaligned. Removed row class in the
templat.

--- a/webroot/common/ui/scss/contrail.custom.scss
+++ b/webroot/common/ui/scss/contrail.custom.scss
@@ -1580,3 +1580,12 @@ div.stack-bar-chart-tooltip > .popover.popover-tooltip {
 .carousel-control-cover-story{
     z-index: 1;
 }
+/*Fix for the select2 placeholder text truncating issue */
+.select2-container-multi .select2-choices .select2-search-field {
+    width: 100%;
+    }
+ .select2-container-multi .select2-choices .select2-search-choice+ .select2-search-field{
+    width: auto;/*overwrites previous class when one/more item(s) are added*/}
+.select2-search-field input{
+    width:100%!important }
+
